<resources>
    <string name="app_name">TextSecure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_need_to_have_entered_your_passphrase_before_managing_keys">You need to have entered your passphrase before managing keys...</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <string name="ApplicationPreferencesActivity_messages_per_conversation">messages per conversation</string>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <string name="ApplicationPreferencesActivity_are_you_sure_you_would_like_to_immediately_trim_all_conversation_threads_to_the_s_most_recent_messages">Are you sure you would like to immediately trim all conversation threads to the %s most recent messages?</string>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_my">My</string>
    <string name="ApplicationPreferencesActivity_disable_storage_encryption">Disable storage encryption?</string>
    <string name="ApplicationPreferencesActivity_warning_this_will_disable_storage_encryption_for_all_messages">
        Warning, this will disable storage encryption for all messages and keys. Your encrypted
        sessions will continue to function, but anyone with physical access to your device will be
        able to access them.
    </string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering...</string>
    <string name="ApplicationPreferencesActivity_unregistering_for_data_based_communication">Unregistering for data based communication</string>
    <string name="ApplicationPreferencesActivity_disable_push_messages">Disable push messages?</string>
    <string name="ApplicationPreferencesActivity_this_will_disable_push_messages">
        This will disable push messages by unregistering you from the server.
        You will need to re-register your phone number to use push messages again in the future.
    </string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_you_are_not_registered_with_the_push_service">You are not registered with the push service...</string>
    <string name="ApplicationPreferencesActivity_updating_directory">Updating directory</string>
    <string name="ApplicationPreferencesActivity_updating_push_directory">Updating push directory...</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">Incoming SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">Incoming SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_textsecure_your_default_sms_app">Touch to make TextSecure your default SMS app</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_sending_message">Error sending message</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to disk. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_received_and_processed_key_exchange_message">Received and processed key exchange message.</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Error, received stale key exchange message.</string>
    <string name="ConversationItem_received_key_exchange_message_click_to_process">Received key exchange message, click to process.</string>
    <string name="ConversationItem_received_plaintext_message_click_to_terminate">Received a plaintext SMS while you have a secure session open. If they don\'t have a session open, messages you send will appear as garbled text. Click to terminate secure session.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_group_action_joined">%1$s have joined the group.</string>
    <string name="ConversationItem_group_action_modify">%1$s has updated the group.</string>
    <string name="ConversationItem_click_to_approve_sms">Tap for SMS fallback</string>
    <string name="ConversationItem_click_to_approve_mms">Tap for MMS fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Tap for insecure fallback</string>
    <string name="ConversationItem_click_to_approve_sms_dialog_title">Fallback to SMS?</string>
    <string name="ConversationItem_click_to_approve_mms_dialog_title">Fallback to MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">This message will <b>not</b> be encrypted because a secure session could not be established.\n\nSend insecure message?</string>
    <string name="ConversationActivity_initiate_secure_session_question">Initiate secure session?</string>
    <string name="ConversationActivity_initiate_secure_session_with_s_question">Initiate secure session with %s?</string>
    <string name="ConversationActivity_abort_secure_session_confirmation">End secure session confirmation</string>
    <string name="ConversationActivity_are_you_sure_that_you_want_to_abort_this_secure_session_question">Are you sure that you want to end this secure session?</string>
    <string name="ConversationActivity_delete_thread_confirmation">Delete thread confirmation</string>
    <string name="ConversationActivity_are_you_sure_that_you_want_to_permanently_delete_this_conversation_question">Are you sure that you want to permanently delete this conversation?</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">Sorry, there was an error setting your attachment.</string>
    <string name="ConversationActivity_sorry_the_selected_video_exceeds_message_size_restrictions">Sorry, the selected video exceeds message size restrictions.</string>
    <string name="ConversationActivity_sorry_the_selected_audio_exceeds_message_size_restrictions">Sorry, the selected audio exceeds message size restrictions.</string>
    <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">Recipient is not a valid SMS or email address!</string>
    <string name="ConversationActivity_message_is_empty_exclamation">Message is empty!</string>
    <string name="ConversationActivity_group_conversation_recipients">Group conversation recipients</string>
    <string name="ConversationActivity_group_conversation">Group conversation</string>
    <string name="ConversationActivity_unnamed_group">Unnamed group</string>
    <string name="ConversationActivity_d_recipients_in_group">%d members</string>
    <string name="ConversationActivity_d_recipients_in_group_singular">1 member</string>
    <string name="ConversationActivity_saved_draft">Saved draft</string>
    <string name="ConversationActivity_invalid_recipient">Invalid recipient!</string>
    <string name="ConversationActivity_calls_not_supported">Calls not supported</string>
    <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">This device does not appear to support dial actions.</string>
    <string name="ConversationActivity_leave_group">Leave group?</string>
    <string name="ConversationActivity_are_you_sure_you_want_to_leave_this_group">Are you sure you want to leave this group?</string>
    <string name="ConversationFragment_message_details">Message details</string>
    <string name="ConversationFragment_transport_s_sent_received_s">Transport: %1$s\nSent/Received: %2$s</string>
    <string name="ConversationFragment_sender_s_transport_s_sent_s_received_s">Sender: %1$s\nTransport: %2$s\nSent: %3$s\nReceived: %4$s</string>
    <string name="ConversationFragment_confirm_message_delete">Confirm message delete</string>
    <string name="ConversationFragment_are_you_sure_you_want_to_permanently_delete_this_message">Are you sure that you want to permanently delete this message?</string>
    <string name="ConversationFragment_save_to_sd_card">Save to SD card?</string>
    <string name="ConversationFragment_this_media_has_been_stored_in_an_encrypted_database_warning">This media has been stored in an encrypted database. The version you save to the SD card will no longer be encrypted. Would you like to continue?</string>
    <string name="ConversationFragment_error_while_saving_attachment_to_sd_card">Error while saving attachment to SD card!</string>
    <string name="ConversationFragment_success_exclamation">Success!</string>
    <string name="ConversationFragment_unable_to_write_to_sd_card_exclamation">Unable to write to SD card!</string>
    <string name="ConversationFragment_saving_attachment">Saving attachment</string>
    <string name="ConversationFragment_saving_attachment_to_sd_card">Saving attachment to SD card...</string>
    <string name="ConversationListAdapter_key_exchange_message">Key exchange message...</string>
    <string name="ConversationListFragment_delete_threads_question">Delete threads?</string>
    <string name="ConversationListFragment_are_you_sure_you_wish_to_delete_all_selected_conversation_threads">Are you sure you wish to delete ALL selected conversation threads?</string>
    <string name="ConversationListFragment_deleting">Deleting</string>
    <string name="ConversationListFragment_deleting_selected_threads">Deleting selected threads...</string>
    <string name="ConversationListItem_key_exchange_message">Key exchange message...</string>
    <string name="ShareActivity_share_with">Share with</string>
    <string name="ExportFragment_export_to_sd_card">Export to storage?</string>
    <string name="ExportFragment_this_will_export_your_encrypted_keys_settings_and_messages">
        This will export your secret keys and messages to your phone\'s storage using your current password.
    </string>
    <string name="conversation_item__mms_image_description">Media message</string>
    <string name="conversation_item__play_button_description">Play button</string>
    <string name="conversation_item_sent__download">Download</string>
    <string name="conversation_item_sent__downloading">Downloading</string>
    <string name="conversation_item_sent__send_failed_indicator_description">Send Failed</string>
    <string name="conversation_item_sent__pending_approval_description">Pending Approval</string>
    <string name="conversation_item_sent__delivered_description">Delivered</string>
</resources>