<?xml version="1.0" encoding="utf-8"?>
<org.thoughtcrime.securesms.ConversationItem xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversation_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?conversation_item_background"
    android:paddingLeft="6dp">

    <LinearLayout android:id="@+id/indicators_parent"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="left|center_vertical"
                  android:layout_marginLeft="6dp"
                  android:layout_alignParentLeft="true"
                  android:layout_centerVertical="true">

        <ImageView android:id="@+id/sms_failed_indicator"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_action_warning_red"
                   android:visibility="gone"
                   android:contentDescription="@string/conversation_item_sent__send_failed_indicator_description"/>

        <ImageView android:id="@+id/pending_approval_indicator"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_dialog_info_holo_light"
                   android:visibility="gone"
                   android:layout_gravity="center_vertical"
                   android:contentDescription="@string/conversation_item_sent__pending_approval_description"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/conversation_item_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:background="?conversation_item_sent_background"
                    android:paddingRight="13dp"
                    android:paddingLeft="13dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

        <LinearLayout android:id="@+id/conversation_body_parent"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:id="@+id/conversation_item_body"
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:linksClickable="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?conversation_sent_text_primary_color"
                android:textColorLink="?conversation_sent_text_primary_color"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/mms_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="230dip"
                        android:layout_height="174dip"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:adjustViewBounds="true"
                        android:visibility="gone"
                        android:contentDescription="@string/conversation_item__mms_image_description"/>

                <ImageButton
                    android:id="@+id/play_slideshow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mms_play_btn"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:contentDescription="@string/conversation_item__play_button_description"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/mms_download_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button android:id="@+id/mms_download_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/conversation_item_sent__download"
                    android:visibility="gone" />

                <TextView android:id="@+id/mms_label_downloading"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/conversation_item_sent__downloading"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout android:id="@+id/indicators"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:paddingLeft="5dp"
                      android:layout_gravity="right">

            <TextView android:id="@+id/conversation_item_date"
                      android:autoLink="none"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:minWidth="15sp"
                      android:linksClickable="false"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:layout_marginTop="2dp"
                      android:layout_gravity="right"
                      android:fontFamily="sans-serif-light"
                      android:drawablePadding="3dp"
                      android:textColor="?conversation_sent_text_secondary_color"
                      android:textSize="@dimen/conversation_item_date_text_size" />

            <TextView android:id="@+id/group_message_status"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:linksClickable="false"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:layout_gravity="right"
                      android:textColor="?conversation_sent_text_secondary_color"
                      android:visibility="gone"
                      android:layout_marginRight="8dip"
                      android:paddingTop="1dip" />

            <ImageView android:id="@+id/sms_indicator"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical|end"
                       android:src="?conversation_item_sent_sms_indicator"
                       android:paddingLeft="2dp"
                       android:visibility="gone" />

            <ImageView android:id="@+id/unsecured_indicator"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical|end"
                       android:src="@drawable/ic_unlocked_white_18dp"
                       android:paddingLeft="2dp"
                       android:visibility="gone" />

            <ImageView android:id="@+id/delivered_indicator"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical|end"
                       android:src="?conversation_delivery_delivered"
                       android:paddingLeft="2dp"
                       android:visibility="gone"
                       android:contentDescription="@string/conversation_item_sent__delivered_description" />

        </LinearLayout>

    </LinearLayout>

    <View android:id="@+id/triangle_tick"
        android:background="?conversation_item_sent_triangle_background"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="11dp"
        android:layout_alignParentRight="true"
        />

    <TextView android:id="@+id/indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conversation_item_parent"
        android:layout_alignParentRight="true"
        android:paddingRight="5dip"
        android:paddingLeft="5dip"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-2dp"
        android:textSize="12sp"
        android:textColor="?conversation_sent_text_secondary_color"
        android:background="?conversation_item_sent_indicator_text_background"
        android:visibility="gone" />

</org.thoughtcrime.securesms.ConversationItem>
